# CmakeList-OpenCV

./: CMakeLists.txt  README.md  main.cpp
